Grammar/y.output
状态 392 conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: translation_unit

    2 primary_expression: IDENTIFIER
    3                   | constant
    4                   | string
    5                   | '(' expression ')'

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | C_CONSTANT
    9         | ENUMERATION_CONSTANT

   10 enumeration_constant: IDENTIFIER

   11 string: STRING_LITERAL

   12 postfix_expression: primary_expression
   13                   | postfix_expression '[' expression ']'
   14                   | postfix_expression '(' ')'
   15                   | postfix_expression '(' argument_expression_list ')'
   16                   | postfix_expression '.' IDENTIFIER
   17                   | postfix_expression PTR_OP IDENTIFIER
   18                   | postfix_expression INC_OP
   19                   | postfix_expression DEC_OP
   20                   | '(' type_name ')' '{' initializer_list '}'
   21                   | '(' type_name ')' '{' initializer_list ',' '}'

   22 argument_expression_list: assignment_expression
   23                         | argument_expression_list ',' assignment_expression

   24 unary_expression: postfix_expression
   25                 | INC_OP unary_expression
   26                 | DEC_OP unary_expression
   27                 | unary_operator cast_expression
   28                 | SIZEOF unary_expression
   29                 | SIZEOF '(' type_name ')'

   30 unary_operator: '&'
   31               | '*'
   32               | '+'
   33               | '-'
   34               | '~'
   35               | '!'

   36 cast_expression: unary_expression
   37                | '(' type_name ')' cast_expression

   38 multiplicative_expression: cast_expression
   39                          | multiplicative_expression '*' cast_expression
   40                          | multiplicative_expression '/' cast_expression
   41                          | multiplicative_expression '%' cast_expression

   42 additive_expression: multiplicative_expression
   43                    | additive_expression '+' multiplicative_expression
   44                    | additive_expression '-' multiplicative_expression

   45 shift_expression: additive_expression
   46                 | shift_expression LEFT_OP additive_expression
   47                 | shift_expression RIGHT_OP additive_expression

   48 relational_expression: shift_expression
   49                      | relational_expression '<' shift_expression
   50                      | relational_expression '>' shift_expression
   51                      | relational_expression LE_OP shift_expression
   52                      | relational_expression GE_OP shift_expression

   53 equality_expression: relational_expression
   54                    | equality_expression EQ_OP relational_expression
   55                    | equality_expression NE_OP relational_expression

   56 and_expression: equality_expression
   57               | and_expression '&' equality_expression

   58 exclusive_or_expression: and_expression
   59                        | exclusive_or_expression '^' and_expression

   60 inclusive_or_expression: exclusive_or_expression
   61                        | inclusive_or_expression '|' exclusive_or_expression

   62 logical_and_expression: inclusive_or_expression
   63                       | logical_and_expression AND_OP inclusive_or_expression

   64 logical_or_expression: logical_and_expression
   65                      | logical_or_expression OR_OP logical_and_expression

   66 conditional_expression: logical_or_expression
   67                       | logical_or_expression '?' expression ':' conditional_expression

   68 assignment_expression: conditional_expression
   69                      | unary_expression assignment_operator assignment_expression

   70 assignment_operator: '='
   71                    | MUL_ASSIGN
   72                    | DIV_ASSIGN
   73                    | MOD_ASSIGN
   74                    | ADD_ASSIGN
   75                    | SUB_ASSIGN
   76                    | LEFT_ASSIGN
   77                    | RIGHT_ASSIGN
   78                    | AND_ASSIGN
   79                    | XOR_ASSIGN
   80                    | OR_ASSIGN

   81 expression: assignment_expression
   82           | expression ',' assignment_expression

   83 constant_expression: conditional_expression

   84 declaration: declaration_specifiers ';'
   85            | declaration_specifiers init_declarator_list ';'

   86 declaration_specifiers: storage_class_specifier declaration_specifiers
   87                       | storage_class_specifier
   88                       | type_specifier declaration_specifiers
   89                       | type_specifier
   90                       | type_qualifier declaration_specifiers
   91                       | type_qualifier
   92                       | function_specifier declaration_specifiers
   93                       | function_specifier

   94 init_declarator_list: init_declarator
   95                     | init_declarator_list ',' init_declarator

   96 init_declarator: declarator '=' initializer
   97                | declarator

   98 storage_class_specifier: TYPEDEF
   99                        | EXTERN
  100                        | STATIC
  101                        | AUTO
  102                        | REGISTER

  103 type_specifier: VOID
  104               | CHAR
  105               | SHORT
  106               | INT
  107               | LONG
  108               | FLOAT
  109               | DOUBLE
  110               | SIGNED
  111               | UNSIGNED
  112               | struct_or_union_specifier
  113               | enum_specifier
  114               | TYPEDEF_NAME

  115 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  116                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  117                          | struct_or_union IDENTIFIER

  118 struct_or_union: STRUCT
  119                | UNION

  120 struct_declaration_list: struct_declaration
  121                        | struct_declaration_list struct_declaration

  122 struct_declaration: specifier_qualifier_list ';'
  123                   | specifier_qualifier_list struct_declarator_list ';'

  124 specifier_qualifier_list: type_specifier specifier_qualifier_list
  125                         | type_specifier
  126                         | type_qualifier specifier_qualifier_list
  127                         | type_qualifier

  128 struct_declarator_list: struct_declarator
  129                       | struct_declarator_list ',' struct_declarator

  130 struct_declarator: ':' constant_expression
  131                  | declarator ':' constant_expression
  132                  | declarator

  133 enum_specifier: ENUM '{' enumerator_list '}'
  134               | ENUM '{' enumerator_list ',' '}'
  135               | ENUM IDENTIFIER '{' enumerator_list '}'
  136               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  137               | ENUM IDENTIFIER

  138 enumerator_list: enumerator
  139                | enumerator_list ',' enumerator

  140 enumerator: enumeration_constant '=' constant_expression
  141           | enumeration_constant

  142 type_qualifier: CONST
  143               | RESTRICT
  144               | VOLATILE

  145 function_specifier: INLINE

  146 declarator: pointer direct_declarator
  147           | direct_declarator

  148 direct_declarator: IDENTIFIER
  149                  | '(' declarator ')'
  150                  | direct_declarator '[' ']'
  151                  | direct_declarator '[' '*' ']'
  152                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  153                  | direct_declarator '[' STATIC assignment_expression ']'
  154                  | direct_declarator '[' type_qualifier_list '*' ']'
  155                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  156                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  157                  | direct_declarator '[' type_qualifier_list ']'
  158                  | direct_declarator '[' assignment_expression ']'
  159                  | direct_declarator '(' parameter_type_list ')'
  160                  | direct_declarator '(' ')'
  161                  | direct_declarator '(' identifier_list ')'

  162 pointer: '*' type_qualifier_list pointer
  163        | '*' type_qualifier_list
  164        | '*' pointer
  165        | '*'

  166 type_qualifier_list: type_qualifier
  167                    | type_qualifier_list type_qualifier

  168 parameter_type_list: parameter_list ',' ELLIPSIS
  169                    | parameter_list

  170 parameter_list: parameter_declaration
  171               | parameter_list ',' parameter_declaration

  172 parameter_declaration: declaration_specifiers declarator
  173                      | declaration_specifiers abstract_declarator
  174                      | declaration_specifiers

  175 identifier_list: IDENTIFIER
  176                | identifier_list ',' IDENTIFIER

  177 type_name: specifier_qualifier_list abstract_declarator
  178          | specifier_qualifier_list

  179 abstract_declarator: pointer direct_abstract_declarator
  180                    | pointer
  181                    | direct_abstract_declarator

  182 direct_abstract_declarator: '(' abstract_declarator ')'
  183                           | '[' ']'
  184                           | '[' '*' ']'
  185                           | '[' STATIC type_qualifier_list assignment_expression ']'
  186                           | '[' STATIC assignment_expression ']'
  187                           | '[' type_qualifier_list STATIC assignment_expression ']'
  188                           | '[' type_qualifier_list assignment_expression ']'
  189                           | '[' type_qualifier_list ']'
  190                           | '[' assignment_expression ']'
  191                           | direct_abstract_declarator '[' ']'
  192                           | direct_abstract_declarator '[' '*' ']'
  193                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  194                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  195                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  196                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  197                           | direct_abstract_declarator '[' type_qualifier_list ']'
  198                           | direct_abstract_declarator '[' assignment_expression ']'
  199                           | '(' ')'
  200                           | '(' parameter_type_list ')'
  201                           | direct_abstract_declarator '(' ')'
  202                           | direct_abstract_declarator '(' parameter_type_list ')'

  203 initializer: '{' initializer_list '}'
  204            | '{' initializer_list ',' '}'
  205            | assignment_expression

  206 initializer_list: designation initializer
  207                 | initializer
  208                 | initializer_list ',' designation initializer
  209                 | initializer_list ',' initializer

  210 designation: designator_list '='

  211 designator_list: designator
  212                | designator_list designator

  213 designator: '[' constant_expression ']'
  214           | '.' IDENTIFIER

  215 statement: labeled_statement
  216          | compound_statement
  217          | expression_statement
  218          | selection_statement
  219          | iteration_statement
  220          | jump_statement

  221 labeled_statement: IDENTIFIER ':' statement
  222                  | CASE constant_expression ':' statement
  223                  | DEFAULT ':' statement

  224 compound_statement: '{' '}'
  225                   | '{' block_item_list '}'

  226 block_item_list: block_item
  227                | block_item_list block_item

  228 block_item: declaration
  229           | statement

  230 expression_statement: ';'
  231                     | expression ';'

  232 selection_statement: IF '(' expression ')' statement ELSE statement
  233                    | IF '(' expression ')' statement
  234                    | SWITCH '(' expression ')' statement

  235 iteration_statement: WHILE '(' expression ')' statement
  236                    | DO statement WHILE '(' expression ')' ';'
  237                    | FOR '(' expression_statement expression_statement ')' statement
  238                    | FOR '(' expression_statement expression_statement expression ')' statement
  239                    | FOR '(' declaration expression_statement ')' statement
  240                    | FOR '(' declaration expression_statement expression ')' statement

  241 jump_statement: GOTO IDENTIFIER ';'
  242               | CONTINUE ';'
  243               | BREAK ';'
  244               | RETURN ';'
  245               | RETURN expression ';'

  246 translation_unit: external_declaration
  247                 | translation_unit external_declaration

  248 external_declaration: function_definition
  249                     | declaration

  250 function_definition: declaration_specifiers declarator declaration_list compound_statement
  251                    | declaration_specifiers declarator compound_statement

  252 declaration_list: declaration
  253                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 35
'%' (37) 41
'&' (38) 30 57
'(' (40) 5 14 15 20 21 29 37 149 159 160 161 182 199 200 201 202 232
    233 234 235 236 237 238 239 240
')' (41) 5 14 15 20 21 29 37 149 159 160 161 182 199 200 201 202 232
    233 234 235 236 237 238 239 240
'*' (42) 31 39 151 154 162 163 164 165 184 192
'+' (43) 32 43
',' (44) 21 23 82 95 129 134 136 139 168 171 176 204 208 209
'-' (45) 33 44
'.' (46) 16 214
'/' (47) 40
':' (58) 67 130 131 221 222 223
';' (59) 84 85 122 123 230 231 236 241 242 243 244 245
'<' (60) 49
'=' (61) 70 96 140 210
'>' (62) 50
'?' (63) 67
'[' (91) 13 150 151 152 153 154 155 156 157 158 183 184 185 186 187
    188 189 190 191 192 193 194 195 196 197 198 213
']' (93) 13 150 151 152 153 154 155 156 157 158 183 184 185 186 187
    188 189 190 191 192 193 194 195 196 197 198 213
'^' (94) 59
'{' (123) 20 21 115 116 133 134 135 136 203 204 224 225
'|' (124) 61
'}' (125) 20 21 115 116 133 134 135 136 203 204 224 225
'~' (126) 34
error (256)
IDENTIFIER (258) 2 10 16 17 116 117 135 136 137 148 175 176 214 221
    241
STRING_LITERAL (259) 11
SIZEOF (260) 28 29
I_CONSTANT (261) 6
F_CONSTANT (262) 7
C_CONSTANT (263) 8
PTR_OP (264) 17
INC_OP (265) 18 25
DEC_OP (266) 19 26
LEFT_OP (267) 46
RIGHT_OP (268) 47
LE_OP (269) 51
GE_OP (270) 52
EQ_OP (271) 54
NE_OP (272) 55
AND_OP (273) 63
OR_OP (274) 65
MUL_ASSIGN (275) 71
DIV_ASSIGN (276) 72
MOD_ASSIGN (277) 73
ADD_ASSIGN (278) 74
SUB_ASSIGN (279) 75
LEFT_ASSIGN (280) 76
RIGHT_ASSIGN (281) 77
AND_ASSIGN (282) 78
XOR_ASSIGN (283) 79
OR_ASSIGN (284) 80
TYPEDEF_NAME (285) 114
ENUMERATION_CONSTANT (286) 9
TYPEDEF (287) 98
EXTERN (288) 99
STATIC (289) 100 152 153 155 185 186 187 193 194 196
AUTO (290) 101
REGISTER (291) 102
INLINE (292) 145
CONST (293) 142
RESTRICT (294) 143
VOLATILE (295) 144
CHAR (296) 104
SHORT (297) 105
INT (298) 106
LONG (299) 107
SIGNED (300) 110
UNSIGNED (301) 111
FLOAT (302) 108
DOUBLE (303) 109
VOID (304) 103
STRUCT (305) 118
UNION (306) 119
ENUM (307) 133 134 135 136 137
ELLIPSIS (308) 168
CASE (309) 222
DEFAULT (310) 223
IF (311) 232 233
ELSE (312) 232
SWITCH (313) 234
WHILE (314) 235 236
DO (315) 236
FOR (316) 237 238 239 240
GOTO (317) 241
CONTINUE (318) 242
BREAK (319) 243
RETURN (320) 244 245


Nonterminals, with rules where they appear

$accept (90)
    左： 0
program (91)
    左： 1, 右： 0
primary_expression (92)
    左： 2 3 4 5, 右： 12
constant (93)
    左： 6 7 8 9, 右： 3
enumeration_constant (94)
    左： 10, 右： 140 141
string (95)
    左： 11, 右： 4
postfix_expression (96)
    左： 12 13 14 15 16 17 18 19 20 21, 右： 13 14 15 16 17 18
    19 24
argument_expression_list (97)
    左： 22 23, 右： 15 23
unary_expression (98)
    左： 24 25 26 27 28 29, 右： 25 26 28 36 69
unary_operator (99)
    左： 30 31 32 33 34 35, 右： 27
cast_expression (100)
    左： 36 37, 右： 27 37 38 39 40 41
multiplicative_expression (101)
    左： 38 39 40 41, 右： 39 40 41 42 43 44
additive_expression (102)
    左： 42 43 44, 右： 43 44 45 46 47
shift_expression (103)
    左： 45 46 47, 右： 46 47 48 49 50 51 52
relational_expression (104)
    左： 48 49 50 51 52, 右： 49 50 51 52 53 54 55
equality_expression (105)
    左： 53 54 55, 右： 54 55 56 57
and_expression (106)
    左： 56 57, 右： 57 58 59
exclusive_or_expression (107)
    左： 58 59, 右： 59 60 61
inclusive_or_expression (108)
    左： 60 61, 右： 61 62 63
logical_and_expression (109)
    左： 62 63, 右： 63 64 65
logical_or_expression (110)
    左： 64 65, 右： 65 66 67
conditional_expression (111)
    左： 66 67, 右： 67 68 83
assignment_expression (112)
    左： 68 69, 右： 22 23 69 81 82 152 153 155 156 158 185 186
    187 188 190 193 194 195 196 198 205
assignment_operator (113)
    左： 70 71 72 73 74 75 76 77 78 79 80, 右： 69
expression (114)
    左： 81 82, 右： 5 13 67 82 231 232 233 234 235 236 238 240
    245
constant_expression (115)
    左： 83, 右： 130 131 140 213 222
declaration (116)
    左： 84 85, 右： 228 239 240 249 252 253
declaration_specifiers (117)
    左： 86 87 88 89 90 91 92 93, 右： 84 85 86 88 90 92 172 173
    174 250 251
init_declarator_list (118)
    左： 94 95, 右： 85 95
init_declarator (119)
    左： 96 97, 右： 94 95
storage_class_specifier (120)
    左： 98 99 100 101 102, 右： 86 87
type_specifier (121)
    左： 103 104 105 106 107 108 109 110 111 112 113 114, 右：
    88 89 124 125
struct_or_union_specifier (122)
    左： 115 116 117, 右： 112
struct_or_union (123)
    左： 118 119, 右： 115 116 117
struct_declaration_list (124)
    左： 120 121, 右： 115 116 121
struct_declaration (125)
    左： 122 123, 右： 120 121
specifier_qualifier_list (126)
    左： 124 125 126 127, 右： 122 123 124 126 177 178
struct_declarator_list (127)
    左： 128 129, 右： 123 129
struct_declarator (128)
    左： 130 131 132, 右： 128 129
enum_specifier (129)
    左： 133 134 135 136 137, 右： 113
enumerator_list (130)
    左： 138 139, 右： 133 134 135 136 139
enumerator (131)
    左： 140 141, 右： 138 139
type_qualifier (132)
    左： 142 143 144, 右： 90 91 126 127 166 167
function_specifier (133)
    左： 145, 右： 92 93
declarator (134)
    左： 146 147, 右： 96 97 131 132 149 172 250 251
direct_declarator (135)
    左： 148 149 150 151 152 153 154 155 156 157 158 159 160 161,
    右： 146 147 150 151 152 153 154 155 156 157 158 159 160 161
pointer (136)
    左： 162 163 164 165, 右： 146 162 164 179 180
type_qualifier_list (137)
    左： 166 167, 右： 152 154 155 156 157 162 163 167 185 187
    188 189 193 195 196 197
parameter_type_list (138)
    左： 168 169, 右： 159 200 202
parameter_list (139)
    左： 170 171, 右： 168 169 171
parameter_declaration (140)
    左： 172 173 174, 右： 170 171
identifier_list (141)
    左： 175 176, 右： 161 176
type_name (142)
    左： 177 178, 右： 20 21 29 37
abstract_declarator (143)
    左： 179 180 181, 右： 173 177 182
direct_abstract_declarator (144)
    左： 182 183 184 185 186 187 188 189 190 191 192 193 194 195
    196 197 198 199 200 201 202, 右： 179 181 191 192 193 194 195
    196 197 198 201 202
initializer (145)
    左： 203 204 205, 右： 96 206 207 208 209
initializer_list (146)
    左： 206 207 208 209, 右： 20 21 203 204 208 209
designation (147)
    左： 210, 右： 206 208
designator_list (148)
    左： 211 212, 右： 210 212
designator (149)
    左： 213 214, 右： 211 212
statement (150)
    左： 215 216 217 218 219 220, 右： 221 222 223 229 232 233
    234 235 236 237 238 239 240
labeled_statement (151)
    左： 221 222 223, 右： 215
compound_statement (152)
    左： 224 225, 右： 216 250 251
block_item_list (153)
    左： 226 227, 右： 225 227
block_item (154)
    左： 228 229, 右： 226 227
expression_statement (155)
    左： 230 231, 右： 217 237 238 239 240
selection_statement (156)
    左： 232 233 234, 右： 218
iteration_statement (157)
    左： 235 236 237 238 239 240, 右： 219
jump_statement (158)
    左： 241 242 243 244 245, 右： 220
translation_unit (159)
    左： 246 247, 右： 1 247
external_declaration (160)
    左： 248 249, 右： 246 247
function_definition (161)
    左： 250 251, 右： 248
declaration_list (162)
    左： 252 253, 右： 250 253


State 0

    0 $accept: . program $end

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    VOID          shift, and go to state 19
    STRUCT        shift, and go to state 20
    UNION         shift, and go to state 21
    ENUM          shift, and go to state 22

    program                    转到状态 23
    declaration                转到状态 24
    declaration_specifiers     转到状态 25
    storage_class_specifier    转到状态 26
    type_specifier             转到状态 27
    struct_or_union_specifier  转到状态 28
    struct_or_union            转到状态 29
    enum_specifier             转到状态 30
    type_qualifier             转到状态 31
    function_specifier         转到状态 32
    translation_unit           转到状态 33
    external_declaration       转到状态 34
    function_definition        转到状态 35


State 1

  114 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 114 (type_specifier)


State 2

   98 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 98 (storage_class_specifier)


State 3

   99 storage_class_specifier: EXTERN .

    $default  reduce using rule 99 (storage_class_specifier)


State 4

  100 storage_class_specifier: STATIC .

    $default  reduce using rule 100 (storage_class_specifier)


State 5

  101 storage_class_specifier: AUTO .

    $default  reduce using rule 101 (storage_class_specifier)


State 6

  102 storage_class_specifier: REGISTER .

    $default  reduce using rule 102 (storage_class_specifier)


State 7

  145 function_specifier: INLINE .

    $default  reduce using rule 145 (function_specifier)


State 8

  142 type_qualifier: CONST .

    $default  reduce using rule 142 (type_qualifier)


State 9

  143 type_qualifier: RESTRICT .

    $default  reduce using rule 143 (type_qualifier)


State 10

  144 type_qualifier: VOLATILE .

    $default  reduce using rule 144 (type_qualifier)


State 11

  104 type_specifier: CHAR .

    $default  reduce using rule 104 (type_specifier)


State 12

  105 type_specifier: SHORT .

    $default  reduce using rule 105 (type_specifier)


State 13

  106 type_specifier: INT .

    $default  reduce using rule 106 (type_specifier)


State 14

  107 type_specifier: LONG .

    $default  reduce using rule 107 (type_specifier)


State 15

  110 type_specifier: SIGNED .

    $default  reduce using rule 110 (type_specifier)


State 16

  111 type_specifier: UNSIGNED .

    $default  reduce using rule 111 (type_specifier)


State 17

  108 type_specifier: FLOAT .

    $default  reduce using rule 108 (type_specifier)


State 18

  109 type_specifier: DOUBLE .

    $default  reduce using rule 109 (type_specifier)


State 19

  103 type_specifier: VOID .

    $default  reduce using rule 103 (type_specifier)


State 20

  118 struct_or_union: STRUCT .

    $default  reduce using rule 118 (struct_or_union)


State 21

  119 struct_or_union: UNION .

    $default  reduce using rule 119 (struct_or_union)


State 22

  133 enum_specifier: ENUM . '{' enumerator_list '}'
  134               | ENUM . '{' enumerator_list ',' '}'
  135               | ENUM . IDENTIFIER '{' enumerator_list '}'
  136               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  137               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 36
    '{'         shift, and go to state 37


State 23

    0 $accept: program . $end

    $end  shift, and go to state 38


State 24

  249 external_declaration: declaration .

    $default  reduce using rule 249 (external_declaration)


State 25

   84 declaration: declaration_specifiers . ';'
   85            | declaration_specifiers . init_declarator_list ';'
  250 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  251                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 39
    ';'         shift, and go to state 40
    '*'         shift, and go to state 41
    '('         shift, and go to state 42

    init_declarator_list  转到状态 43
    init_declarator       转到状态 44
    declarator            转到状态 45
    direct_declarator     转到状态 46
    pointer               转到状态 47


State 26

   86 declaration_specifiers: storage_class_specifier . declaration_specifiers
   87                       | storage_class_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    VOID          shift, and go to state 19
    STRUCT        shift, and go to state 20
    UNION         shift, and go to state 21
    ENUM          shift, and go to state 22

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers     转到状态 48
    storage_class_specifier    转到状态 26
    type_specifier             转到状态 27
    struct_or_union_specifier  转到状态 28
    struct_or_union            转到状态 29
    enum_specifier             转到状态 30
    type_qualifier             转到状态 31
    function_specifier         转到状态 32


State 27

   88 declaration_specifiers: type_specifier . declaration_specifiers
   89                       | type_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    VOID          shift, and go to state 19
    STRUCT        shift, and go to state 20
    UNION         shift, and go to state 21
    ENUM          shift, and go to state 22

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers     转到状态 49
    storage_class_specifier    转到状态 26
    type_specifier             转到状态 27
    struct_or_union_specifier  转到状态 28
    struct_or_union            转到状态 29
    enum_specifier             转到状态 30
    type_qualifier             转到状态 31
    function_specifier         转到状态 32


State 28

  112 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 112 (type_specifier)


State 29

  115 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
  116                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  117                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 50
    '{'         shift, and go to state 51


State 30

  113 type_specifier: enum_specifier .

    $default  reduce using rule 113 (type_specifier)


State 31

   90 declaration_specifiers: type_qualifier . declaration_specifiers
   91                       | type_qualifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    VOID          shift, and go to state 19
    STRUCT        shift, and go to state 20
    UNION         shift, and go to state 21
    ENUM          shift, and go to state 22

    $default  reduce using rule 91 (declaration_specifiers)

    declaration_specifiers     转到状态 52
    storage_class_specifier    转到状态 26
    type_specifier             转到状态 27
    struct_or_union_specifier  转到状态 28
    struct_or_union            转到状态 29
    enum_specifier             转到状态 30
    type_qualifier             转到状态 31
    function_specifier         转到状态 32


State 32

   92 declaration_specifiers: function_specifier . declaration_specifiers
   93                       | function_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    VOID          shift, and go to state 19
    STRUCT        shift, and go to state 20
    UNION         shift, and go to state 21
    ENUM          shift, and go to state 22

    $default  reduce using rule 93 (declaration_specifiers)

    declaration_specifiers     转到状态 53
    storage_class_specifier    转到状态 26
    type_specifier             转到状态 27
    struct_or_union_specifier  转到状态 28
    struct_or_union            转到状态 29
    enum_specifier             转到状态 30
    type_qualifier             转到状态 31
    function_specifier         转到状态 32


State 33

    1 program: translation_unit .
  247 translation_unit: translation_unit . external_declaration

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    VOID          shift, and go to state 19
    STRUCT        shift, and go to state 20
    UNION         shift, and go to state 21
    ENUM          shift, and go to state 22

    $default  reduce using rule 1 (program)

    declaration                转到状态 24
    declaration_specifiers     转到状态 25
    storage_class_specifier    转到状态 26
    type_specifier             转到状态 27
    struct_or_union_specifier  转到状态 28
    struct_or_union            转到状态 29
    enum_specifier             转到状态 30
    type_qualifier             转到状态 31
    function_specifier         转到状态 32
    external_declaration       转到状态 54
    function_definition        转到状态 35


State 34

  246 translation_unit: external_declaration .

    $default  reduce using rule 246 (translation_unit)


State 35

  248 external_declaration: function_definition .

    $default  reduce using rule 248 (external_declaration)


State 36

  135 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  136               | ENUM IDENTIFIER . '{' enumerator_list ',' '}'
  137               | ENUM IDENTIFIER .

    '{'  shift, and go to state 55

    $default  reduce using rule 137 (enum_specifier)


State 37

  133 enum_specifier: ENUM '{' . enumerator_list '}'
  134               | ENUM '{' . enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 56

    enumeration_constant  转到状态 57
    enumerator_list       转到状态 58
    enumerator            转到状态 59


State 38

    0 $accept: program $end .

    $default  接受


State 39

  148 direct_declarator: IDENTIFIER .

    $default  reduce using rule 148 (direct_declarator)


State 40

   84 declaration: declaration_specifiers ';' .

    $default  reduce using rule 84 (declaration)


State 41

  162 pointer: '*' . type_qualifier_list pointer
  163        | '*' . type_qualifier_list
  164        | '*' . pointer
  165        | '*' .

    CONST     shift, and go to state 8
    RESTRICT  shift, and go to state 9
    VOLATILE  shift, and go to state 10
    '*'       shift, and go to state 41

    $default  reduce using rule 165 (pointer)

    type_qualifier       转到状态 60
    pointer              转到状态 61
    type_qualifier_list  转到状态 62


State 42

  149 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 39
    '*'         shift, and go to state 41
    '('         shift, and go to state 42

    declarator         转到状态 63
    direct_declarator  转到状态 46
    pointer            转到状态 47


State 43

   85 declaration: declaration_specifiers init_declarator_list . ';'
   95 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 64
    ','  shift, and go to state 65


State 44

   94 init_declarator_list: init_declarator .

    $default  reduce using rule 94 (init_declarator_list)


State 45

   96 init_declarator: declarator . '=' initializer
   97                | declarator .
  250 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  251                    | declaration_specifiers declarator . compound_statement

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    INT           shift, and go to state 13
    LONG          shift, and go to state 14
    SIGNED        shift, and go to state 15
    UNSIGNED      shift, and go to state 16
    FLOAT         shift, and go to state 17
    DOUBLE        shift, and go to state 18
    VOID          shift, and go to state 19
    STRUCT        shift, and go to state 20
    UNION         shift, and go to state 21
    ENUM          shift, and go to state 22
    '='           shift, and go to state 66
    '{'           shift, and go to state 67

    $default  reduce using rule 97 (init_declarator)
